WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46565
[GTK] Doesn't build with gtk+ 2.14
https://bugs.webkit.org/show_bug.cgi?id=46565
Summary
[GTK] Doesn't build with gtk+ 2.14
sandy paulanskaya
Reported
2010-09-25 05:37:22 PDT
i know i need new gtk version. but i need to use my old gtk 2.14 library in ubuntu 8.10 Is there not any compatibitity if-define statements for old gtk 2.14? CXX WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-EditorClientGtk.lo CXX WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FrameLoaderClientGtk.lo CXX WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp: In member function ‘void FullscreenVideoController::hideHud()’: WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:207: error: ‘gtk_widget_get_visible’ was not declared in this scope WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:213: error: ‘GDK_BLANK_CURSOR’ was not declared in this scope WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp: In member function ‘void FullscreenVideoController::enterFullscreen()’: WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:286: error: ‘GDK_BLANK_CURSOR’ was not declared in this scope WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:287: error: ‘gdk_window_get_cursor’ was not declared in this scope ./WebCore/platform/gtk/GtkVersioning.h: At global scope: ./WebCore/platform/gtk/GtkVersioning.h:67: warning: ‘void gdk_window_get_root_coords(GdkWindow*, gint, gint, gint*, gint*)’ declared ‘static’ but never defined make[1]: *** [WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo] error 1 make[1]: Leaving directory `/media/sdc1/WebKit' make: *** [all] error 2
Attachments
proposed patch
(6.57 KB, patch)
2010-09-27 02:23 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
proposed patch
(6.54 KB, patch)
2010-09-27 03:07 PDT
,
Philippe Normand
mrobinson
: review-
Details
Formatted Diff
Diff
proposed patch
(6.82 KB, patch)
2010-09-27 09:32 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
proposed patch
(7.29 KB, patch)
2010-09-27 10:21 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-09-25 09:37:50 PDT
These just need to be defined for older versions in GtkVersioning.h.
sandy paulanskaya
Comment 2
2010-09-27 00:27:48 PDT
Martin Robinson// you mean i have to make GtkVersioning.h file personally? still there is no such file.
sandy paulanskaya
Comment 3
2010-09-27 00:34:25 PDT
i found WebCore/platform/gtk/GtkVersioning.h. please add some adjusments about GDK_BLANK_CURSOR,gdk_window_get_cursor fot gtk 2.14.
Philippe Normand
Comment 4
2010-09-27 02:23:30 PDT
Created
attachment 68889
[details]
proposed patch
WebKit Review Bot
Comment 5
2010-09-27 02:29:11 PDT
Attachment 68889
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:181: Use 0 instead of NULL. [readability/null] [5] WebCore/platform/gtk/GtkVersioning.c:63: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:71: Declaration has space between * and variable name in GdkCursor* blankCursor [whitespace/declaration] [3] WebCore/platform/gtk/GtkVersioning.c:76: Declaration has space between * and variable name in GdkCursor* cursor [whitespace/declaration] [3] WebCore/platform/gtk/GtkVersioning.c:77: Declaration has space between * and variable name in GdkPixmap* source [whitespace/declaration] [3] WebCore/platform/gtk/GtkVersioning.c:78: Declaration has space between * and variable name in GdkPixmap* mask [whitespace/declaration] [3] WebCore/platform/gtk/GtkVersioning.c:81: cursor_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:94: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:94: menu_item is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:96: Declaration has space between * and variable name in GtkWidget* label [whitespace/declaration] [3] WebCore/platform/gtk/GtkVersioning.c:101: Should have a space between // and comment [whitespace/comments] [4] WebCore/platform/gtk/GtkVersioning.h:60: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebCore/platform/gtk/GtkVersioning.h:69: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:73: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:73: menu_item is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:74: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 16 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 6
2010-09-27 03:07:17 PDT
Created
attachment 68892
[details]
proposed patch Fixed the coding style issues that made sense.
WebKit Review Bot
Comment 7
2010-09-27 03:09:51 PDT
Attachment 68892
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:181: Use 0 instead of NULL. [readability/null] [5] WebCore/platform/gtk/GtkVersioning.c:63: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:94: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:69: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:73: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 5 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 8
2010-09-27 07:49:24 PDT
Comment on
attachment 68892
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=68892&action=review
Looks good. I just have a few small issues.
> WebCore/ChangeLog:8 > + Fixed the build for GTK+ 2.14.
Please expand this a bit. Say that you added some backward-compatible stuff to GtkVersioning.
> WebCore/platform/gtk/GtkVersioning.c:80 > + GdkColor fg = { 0, 65535, 0, 0 }; /* Red. */ > + GdkColor bg = { 0, 0, 0, 65535 }; /* Blue. */
Please don't use abbreviations.
> WebCore/platform/gtk/GtkVersioning.c:82 > + 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0};
This can be one line if it's less than 120 characters.
> WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:181 > + gdk_window_set_cursor(window, NULL);
This should be a 0 instead of NULL.
Philippe Normand
Comment 9
2010-09-27 09:32:26 PDT
Created
attachment 68919
[details]
proposed patch
WebKit Review Bot
Comment 10
2010-09-27 09:38:14 PDT
Attachment 68919
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/gtk/GtkVersioning.c:63: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:93: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:69: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:73: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 4 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 11
2010-09-27 10:21:11 PDT
Created
attachment 68924
[details]
proposed patch Removed the un-needed set_cursor code from the fullscreen video controller
WebKit Review Bot
Comment 12
2010-09-27 10:25:13 PDT
Attachment 68924
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/gtk/GtkVersioning.c:63: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.c:93: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:69: gdk_window_get_root_coords is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/GtkVersioning.h:73: gtk_menu_item_get_label is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 4 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 13
2010-09-27 10:34:45 PDT
Comment on
attachment 68924
[details]
proposed patch Great, thanks for fixing and simplifying things.
Philippe Normand
Comment 14
2010-09-27 10:56:58 PDT
Committed
r68404
: <
http://trac.webkit.org/changeset/68404
>
WebKit Review Bot
Comment 15
2010-09-27 12:04:05 PDT
http://trac.webkit.org/changeset/68404
might have broken GTK Linux 64-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/68403
http://trac.webkit.org/changeset/68404
http://trac.webkit.org/changeset/68405
http://trac.webkit.org/changeset/68406
sandy paulanskaya
Comment 16
2010-09-28 08:12:51 PDT
comitted source have some errors. what is this? CXX WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:289:6: error: #endif without #if WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:578:2: error: #endif without #if make[1]: *** [WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo] error 1 make[1]: Leaving directory `/media/sdc1/WebKit' make: *** [all] error 2
Philippe Normand
Comment 17
2010-09-28 08:19:48 PDT
(In reply to
comment #16
)
> comitted source have some errors. > what is this? > > CXX WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo > WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:289:6: error: #endif without #if > WebKit/gtk/WebCoreSupport/FullscreenVideoController.cpp:578:2: error: #endif without #if > make[1]: *** [WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-FullscreenVideoController.lo] error 1 > make[1]: Leaving directory `/media/sdc1/WebKit' > make: *** [all] error 2
Are you sure your checkout directory is clean?
sandy paulanskaya
Comment 18
2010-09-28 08:29:51 PDT
removed old FullscreenVideoController.cpp and checked out new FullscreenVideoController.cpp. compiled ok. [/media/sdc1/WebKit/WebKit/gtk/WebCoreSupport]$ diff FullscreenVideoController.cpp FullscreenVideoController.cpp-old 179c179,181 < ---
> #else > gdk_window_set_cursor(window, NULL); > #endif
286a289
> #endif
maybe there was update after my check-out.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug