2010-09-27  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Doesn't build with gtk+ 2.14
        https://bugs.webkit.org/show_bug.cgi?id=46565

        Fixed the build for GTK+ 2.14 by adding backward compatible
        a backward-compatible function for gtk_menu_item_get_label and a
        utility function to create a blank mouse cursor. Those functions
        are used in the fullscreen video controller and in the DRT
        EventSender.

        * platform/gtk/GtkVersioning.c:
        (gdk_window_get_root_coords):
        (blankCursor):
        (gtk_menu_item_get_label):
        * platform/gtk/GtkVersioning.h:

WebKit/gtk:

        Reviewed by Martin Robinson.

        [GTK] Doesn't build with gtk+ 2.14
        https://bugs.webkit.org/show_bug.cgi?id=46565

        Fixed the build for GTK+ 2.14. Don't use gdk_window_get_cursor()
        for that GTK+ version as I found no acceptable way to work-around
        its absence.

        * WebCoreSupport/FullscreenVideoController.cpp:
        (FullscreenVideoController::showHud):
        (FullscreenVideoController::hideHud):
        (FullscreenVideoController::enterFullscreen):

Canonical link: https://commits.webkit.org/59094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68404 268f45cc-cd09-0410-ab3c-d52691b4dbfc