WebKit/gtk/WebCoreSupport/FullscreenVideoController.h
@@ -82,7 +82,6 @@ private:
     guint m_volumeUpdateId;
     bool m_seekLock;
     GtkWidget* m_window;
-    PlatformRefPtr<GdkCursor> m_cursor;
     GtkWidget* m_hudWindow;
     GtkAction* m_playPauseAction;
     GtkAction* m_exitFullscreenAction;
